--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,11 @@
 		<version>3.3.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>Liquidacion</groupId>
-	<artifactId>Liquidicacion</artifactId>
+	<groupId>liquidacion2.0</groupId>
+	<artifactId>liquidacion</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
-	<name>Liquidicacion</name>
-	<description>Api para Liquidacion</description>
+	<name>liquidacion</name>
+	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -38,32 +37,9 @@
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-tomcat</artifactId>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-                <dependency>
-                    <groupId>com.jcraft</groupId>
-                    <artifactId>jsch</artifactId>
-                    <version>0.1.55</version>
-                </dependency>
-                <!-- https://mvnrepository.com/artifact/com.hierynomus/sshj -->
-                <dependency>
-                    <groupId>com.hierynomus</groupId>
-                    <artifactId>sshj</artifactId>
-                    <version>0.31.0</version>
-                        <type>jar</type>
-                </dependency>
-	 <dependency>
-	  <groupId>commons-io</groupId>
-	  <artifactId>commons-io</artifactId>
-	  <version>2.5</version>
-	  <type>jar</type>
-	 </dependency>
 	</dependencies>
 
 	<build>
