--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+	 <dependency>
+	  <groupId>com.hierynomus</groupId>
+	  <artifactId>sshj</artifactId>
+	  <version>0.31.0</version>
+	  <type>jar</type>
+	 </dependency>
 	</dependencies>
 
 	<build>
